fix: track module issues & 401 instead 403 if unauthed
